Add basic dive parser support in dcxx

--- a/lib/dcxx/Makefile.am
+++ b/lib/dcxx/Makefile.am
@@ -1,5 +1,5 @@
 noinst_LIBRARIES = libdcxx.a
 
-libdcxx_a_SOURCES = device.cc suunto.cc types.cc
+libdcxx_a_SOURCES = device.cc parser.cc suunto.cc types.cc
 libdcxx_a_CPPFLAGS = -I $(top_srcdir)/include -fPIC
 
