dcparse: Add a tool for parsing raw log files
Add dcparse, a tool for parsing raw dive computer log files. The tool
currently supports general dive information output in plain text and
dive profile output in CSV.

--- a/configure.ac
+++ b/configure.ac
@@ -47,9 +47,11 @@ AC_CONFIG_FILES([
 
 	include/Makefile
 	include/dcxx/Makefile
+	include/serialize/Makefile
 
 	lib/Makefile
 	lib/dcxx/Makefile
+	lib/serialize/Makefile
 
 	tools/Makefile
 ])
