--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,2 +1,2 @@
-SUBDIRS=dcxx
-noinst_HEADERS = dcconf.hh dev_common.hh
+SUBDIRS=dcxx serialize
+noinst_HEADERS = dcconf.hh dev_common.hh valid_value.hh
