Add some quick and dirty XML serialization class with a SAX-like interface

--- a/lib/serialize/Makefile.am
+++ b/lib/serialize/Makefile.am
@@ -1,4 +1,4 @@
 noinst_LIBRARIES = libserialize.a
 
-libserialize_a_SOURCES = csv.cc sample.cc text.cc
+libserialize_a_SOURCES = csv.cc sample.cc text.cc saxlite.cc
 libserialize_a_CPPFLAGS = -I $(top_srcdir)/include -fPIC
